--- a/codigo.html
+++ b/codigo.html
@@ -15,11 +15,11 @@
 
         <div class="div-links">
           <ul class="itens-links">
-            <li>Início</li>
-            <li>Protótipo</li>
+            <li><a href="#inicio">Início</a></li>
+            <li><a href="#prototipo">Protótipo</a></li>
             <li>Sustentabilidade</li>
             <li>Análises</li>
-            <li>Sobre nós</li>
+            <li><a href="#sobre-nos">Sobre nós</a></li>
           </ul>
         </div>
 
