--- a/codigo.html
+++ b/codigo.html
@@ -17,8 +17,8 @@
           <ul class="itens-links">
             <li><a href="#inicio">Início</a></li>
             <li><a href="#prototipo">Protótipo</a></li>
-            <li>Sustentabilidade</li>
             <li>Análises</li>
+            <li><a href="#assinaturas">Planos</a></li>
             <li><a href="#sobre-nos">Sobre nós</a></li>
           </ul>
         </div>
@@ -76,6 +76,25 @@
           <img src="./src/prototipo.PNG" alt="Protótipo do sistema" />
         </div>
       </div>
+    </div>
+
+    <div class="modeloNegocios" id="assinaturas">
+      <h2>Planos</h2>
+
+      <div class="conteudoPlanos">
+        <div class="planos"></div>
+          <div class="plano">
+            <h3>Básico</h3>
+          </div>
+          <div class="plano">
+            <h3>Intermediário</h3>
+          </div>
+          <div class="plano">
+            <h3>Premium</h3>
+          </div>
+        </div>
+      </div>
+      
     </div>
 
     <div class="recysprout">
