redirecionamento de elementos do cabeçalho

--- a/codigo.html
+++ b/codigo.html
@@ -32,7 +32,7 @@
     </header>
 
     <main>
-      <div class="banner">
+      <div class="banner" id="inicio">
         <h1 class="titulo-banner">
           Uma forma de <span class="revolucionar"><i>revolucionar</i></span> a
           <br />
@@ -50,7 +50,7 @@
       
     </main>
 
-    <div class="funcionalidades">
+    <div class="funcionalidades" id="prototipo">
       <h1>PROTÓTIPO</h1>
       <div class="content">
         <div class="info-grid">
@@ -97,7 +97,7 @@
       
     </div>
 
-    <div class="recysprout">
+    <div class="recysprout" id="sobre-nos">
       <h1>Sobre nós</h1>
       <p>
         A RecySprout é uma startup de tecnologia focada em soluções ambientais
