Adição de div "solução"

--- a/codigo.html
+++ b/codigo.html
@@ -16,9 +16,10 @@
         <div class="div-links">
           <ul class="itens-links">
             <li><a href="#inicio">Início</a></li>
-            <li><a href="#prototipo">Protótipo</a></li>
+            <li><a href="#proposta">Solução</a></li>
             <li><a href="#dados">Análises</a></li>
             <li><a href="#assinaturas">Planos</a></li>
+            <li><a href="#prototipo">Protótipo</a></li>
             <li><a href="#sobre-nos">Sobre nós</a></li>
           </ul>
         </div>
@@ -48,6 +49,15 @@
       </div>
     </main>
 
+      <div class="solucao" id="proposta">
+        <h1>Solução</h1>
+        <div class="retangulos">
+          <div class="retangulo retangulo1"></div>
+          <div class="retangulo retangulo2"></div>
+          <div class="retangulo retangulo3"></div>
+        </div>
+      </div>    
+
     <div class="analises" id="dados">
       <h2>A irrigação é o maior gasto no campo? Veja os dados sobre quanto os agricultores investem.</h2>
     </div>
@@ -56,7 +66,7 @@
       <h1>PROTÓTIPO</h1>
       
       <div class="content">
-        <div class="info-grid">
+        <div class="grade">
           <div class="info-box">
             <img src="./src/iconeAgua.jpg">
             <h2>IRRIGAÇÃO AUTOMATIZADA</h2>
