Adição de conteúdo dos planos

--- a/codigo.html
+++ b/codigo.html
@@ -55,6 +55,7 @@
           <div class="retangulo retangulo1"></div>
           <div class="retangulo retangulo2"></div>
           <div class="retangulo retangulo3"></div>
+          <img src="./src/agricultorPlantacao.png"
         </div>
       </div>    
 
@@ -67,22 +68,22 @@
       
       <div class="content">
         <div class="grade">
-          <div class="info-box">
+          <div class="caixa">
             <img src="./src/iconeAgua.jpg">
             <h2>IRRIGAÇÃO AUTOMATIZADA</h2>
             <p>Automatização de irrigação para economia de água e energia.</p>
           </div>
-          <div class="info-box">
+          <div class="caixa">
             <img src="./src/iconeControleRemoto.png">
             <h2>CONTROLE POR APLICATIVO</h2>
             <p>Acesse e controle seu sistema de qualquer lugar.</p>
           </div>
-          <div class="info-box">
+          <div class="caixa">
             <img src="./src/iconeSensor.png">
             <h2>SENSOR DE UMIDADE DO SOLO</h2>
             <p>Otimize a irrigação com dados precisos do sensor de umidade.</p>
           </div>
-          <div class="info-box">
+          <div class="caixa">
             <img src="./src/iconeTorneira.png">
             <h2>INDICADOR DE NÍVEL DE ÁGUA</h2>
             <p>Sistema de alerta para níveis críticos de água.</p>
@@ -102,13 +103,37 @@
       <div class="conteudoPlanos">
         <div class="planos"></div>
           <div class="plano">
-            <h3>Básico</h3>
-          </div>
-          <div class="plano">
-            <h3>Intermediário</h3>
+            <h3>Standard</h3>
+            <h5>100/mensal</h5>
+            <ul class="lista-planos">
+              <li>Sistema de irrigação</li>
+              <li>Sistema de umidade</li>
+              <li>Manutenção</li>
+              <li>Controle remoto</li>
+            </ul>
           </div>
           <div class="plano">
             <h3>Premium</h3>
+            <h5>200/mensal</h5>
+            <ul class="lista-planos">
+              <li>Sistema de irrigação</li>
+              <li>Sistema de umidade</li>
+              <li>Manutenção</li>
+              <li>Controle via aplicativo</li>
+              <li>Indicador de nível de água</li>
+            </ul>
+          </div>
+          <div class="plano">
+            <h3>Plus</h3>
+            <h5>300/mensal</h5>
+            <ul class="lista-planos">
+              <li>Sistema de irrigação</li>
+              <li>Sistema de umidade</li>
+              <li>Manutenção</li>
+              <li>Controle via aplicativo</li>
+              <li>Indicador de nível de água</li>
+              <li>Placa solar</li>
+            </ul>
           </div>
         </div>
       </div>   
