--- a/codigo.html
+++ b/codigo.html
@@ -55,7 +55,7 @@
           <div class="retangulo retangulo1"></div>
           <div class="retangulo retangulo2"></div>
           <div class="retangulo retangulo3"></div>
-          <img src="./src/agricultorPlantacao.png"
+          <img src="./src/agricultorPlantacao.png">
         </div>
       </div>    
 
