--- a/codigo.html
+++ b/codigo.html
@@ -49,22 +49,28 @@
       </div>
     </main>
 
-      <div class="solucao" id="proposta">
-        <h1>Solução</h1>
-        <div class="retangulos">
-          <div class="retangulo retangulo1"></div>
-          <div class="retangulo retangulo2"></div>
-          <div class="retangulo retangulo3"></div>
-          <img src="./src/agricultorPlantacao.png">
-        </div>
-      </div>    
+    <div class="solucao" id="proposta">
+      <h1>Solução</h1>
+      <div class="retangulos">
+        <div class="retangulo retangulo1"></div>
+        <div class="retangulo retangulo2"></div>
+        <div class="retangulo retangulo3"></div>
+        <img src="./src/agricultorPlantacao.png">
+      </div>
+    </div>    
 
     <div class="analises" id="dados">
-      <h2>A irrigação é o maior gasto no campo? Veja os dados sobre quanto os agricultores investem.</h2>
+      <img src="./src/agricultores.jpeg" alt="Agricultores" class="imagemSolucao" />
+      <div class="circulos">
+        <div class="circulo1"></div>
+        <div class="circulo2"></div>
+        <div class="circulo3"></div>
+      </div>
+      <h2>Análises</h2>
     </div>
     
     <div class="funcionalidades" id="prototipo">
-      <h1>PROTÓTIPO</h1>
+      <h1>Protótipo</h1>
       
       <div class="content">
         <div class="grade">
