--- a/codigo.html
+++ b/codigo.html
@@ -60,7 +60,7 @@
     </div>    
 
     <div class="analises" id="dados">
-      <h1>Solução</h1>
+      <h1>Análises</h1>
       <img src="./src/agricultores.jpeg" alt="Agricultores" class="imagemSolucao" />
       <div class="circulos">
         <div class="circulo1"></div>
