--- a/codigo.html
+++ b/codigo.html
@@ -67,6 +67,11 @@
         <div class="circulo2"></div>
         <div class="circulo3"></div>
       </div>
+      <div class="quadros">
+        <div class="quadro1"></div>
+        <div class="quadro2"></div>
+        <div class="quadro3"></div>
+      </div>
     </div>
     
     <div class="funcionalidades" id="prototipo">
@@ -76,22 +81,22 @@
         <div class="grade">
           <div class="caixa">
             <img src="./src/iconeAgua.jpg">
-            <h2>IRRIGAÇÃO AUTOMATIZADA</h2>
+            <p>IRRIGAÇÃO AUTOMATIZADA</p>
             <p>Automatização de irrigação para economia de água e energia.</p>
           </div>
           <div class="caixa">
             <img src="./src/iconeControleRemoto.png">
-            <h2>CONTROLE POR APLICATIVO</h2>
+            <p>CONTROLE POR APLICATIVO</p>
             <p>Acesse e controle seu sistema de qualquer lugar.</p>
           </div>
           <div class="caixa">
             <img src="./src/iconeSensor.png">
-            <h2>SENSOR DE UMIDADE DO SOLO</h2>
+            <p>SENSOR DE UMIDADE DO SOLO</p>
             <p>Otimize a irrigação com dados precisos do sensor de umidade.</p>
           </div>
           <div class="caixa">
             <img src="./src/iconeTorneira.png">
-            <h2>INDICADOR DE NÍVEL DE ÁGUA</h2>
+            <p>INDICADOR DE NÍVEL DE ÁGUA</p>
             <p>Sistema de alerta para níveis críticos de água.</p>
           </div>
         </div>
@@ -117,6 +122,7 @@
               <li>Manutenção</li>
               <li>Controle remoto</li>
             </ul>
+            <p>ASSINE AGORA</p>
           </div>
           <div class="plano">
             <h3>Premium</h3>
@@ -128,6 +134,7 @@
               <li>Controle via aplicativo</li>
               <li>Indicador de nível de água</li>
             </ul>
+            <p>ASSINE AGORA</p>
           </div>
           <div class="plano">
             <h3>Plus</h3>
@@ -140,18 +147,7 @@
               <li>Indicador de nível de água</li>
               <li>Placa solar</li>
             </ul>
-          </div>
-          <div class="plano">
-            <h3>Plus</h3>
-            <h5>300/mensal</h5>
-            <ul class="lista-planos">
-              <li>Sistema de irrigação</li>
-              <li>Sistema de umidade</li>
-              <li>Manutenção</li>
-              <li>Controle via aplicativo</li>
-              <li>Indicador de nível de água</li>
-              <li>Placa solar</li>
-            </ul>
+            <p>ASSINE AGORA</p>
           </div>
         </div>
       </div>   
