--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img
             src="./src/imagemAgricultor.png"
             alt="imagem de um agricultor"
-            class="imagem-primcipal"
+            class="imagem-principal"
           />
           </div>
       </div>
