--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Irrigador Inteligente - RecySprout</title>
+    <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/estilo.css" />
     <link rel="stylesheet" href="./src/css/responsivo.css" />
   </head>
