--- a/index.html
+++ b/index.html
@@ -54,9 +54,21 @@
     <div class="solucao" id="proposta">
       <h2>Solução</h2>
       <div class="retangulos">
-        <div class="retangulo retangulo1"></div>
-        <div class="retangulo retangulo2"></div>
-        <div class="retangulo retangulo3"></div>
+        <div class="retangulo retangulo1">
+          <div class="texto texto1">
+            <p>Pequenos agricultores enfrentam desperdício<br>de água e alto custo de irrigação.</p>
+          </div>
+        </div>
+        <div class="retangulo retangulo2">
+          <div class="texto texto2">
+            <p>Por isso, desenvolvemos um irrigador<br>automatizado. O mesmo reutiliza água da chuva<br>e otimiza a irrigação com sensores inteligentes.</p>
+          </div>
+        </div>
+        <div class="retangulo retangulo3">
+          <div class="texto texto3">
+            <p>O nosso irrigador combina automação com<br>materiais reciclados, garantindo a eficiência,<br>economia e sustentabilidade.</p>
+          </div>
+        </div>
         <img src="./src/agricultorPlantacao.png">
       </div>
     </div>    
@@ -70,9 +82,21 @@
         <div class="circulo3"></div>
       </div>
       <div class="quadros">
-        <div class="quadro1"></div>
-        <div class="quadro2"></div>
-        <div class="quadro3"></div>
+        <div class="quadro1">
+          <div class="analise analise1">
+            <p>47% das propriedades agrícolas têm<br>menos de 10 hectares. (IBGE)</p>
+          </div>
+        </div>
+        <div class="quadro2">
+          <div class="analise analise2">
+            <p>A irrigação consome 49,8% das águas<br>em reservatórios no Brasil. (Atlas da Irrigação)</p>
+          </div>
+        </div>
+        <div class="quadro3">
+          <div class="analise analise3">
+            <p>54,5% dos agricultores gastam 2 horas só<br>na irrigação. (Pesquisa interna com 25 pessoas)</p>
+          </div>
+        </div>
       </div>
     </div>
     
@@ -216,6 +240,29 @@
       </div>
 
     </div>
-     
+
+    <div class="rodape">
+      <p>©RecySprout - 2025</p>
+      <div class="infoRodape">
+        <div class="secoes">
+          <h4>Seções</h4>
+          <ul>
+            <li><a href="#inicio">Início</a></li>
+            <li><a href="#proposta">Solução</a></li>
+            <li><a href="#dados">Análises</a></li>
+            <li><a href="#prototipo">Protótipo</a></li>
+            <li><a href="#assinaturas">Planos</a></li>
+            <li><a href="#sobre-nos">Sobre nós</a></li>
+          </ul>
+        </div>
+        <div class="contato">
+          <h4>Entre em contato conosco</h4>
+          <ul>
+            <li><a href="mailto:recysprout@gmail.com">recysprout@gmail.com</a></li>
+            <li><a href="https://www.instagram.com/recy_sprouts" target="_blank">recy_sprouts</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>         
   </body>
 </html>
