--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
                 <li>Manutenção</li>
                 <li>Controle remoto</li>
               </ul>
-              <button class="botaoAssine">ASSINE AQUI</button>
+              <a href="https://www.instagram.com/recy_sprouts/" target="_blank" rel="noopener noreferrer">
+                <button class="botaoAssine">ASSINE AQUI</button>
+              </a>
             </div>
           </div>
           <div class="plano-container">
@@ -174,7 +176,9 @@
                 <li>Controle via aplicativo</li>
                 <li>Indicador de nível de água</li>
               </ul>
-              <button class="botaoAssine">ASSINE AQUI</button>
+              <a href="https://www.instagram.com/recy_sprouts/" target="_blank" rel="noopener noreferrer">
+                <button class="botaoAssine">ASSINE AQUI</button>
+              </a>
             </div>
           </div>
           <div class="plano-container">
@@ -192,7 +196,9 @@
                 <li>Indicador de nível de água</li>
                 <li>Placa solar</li>
               </ul>
-              <button class="botaoAssine">ASSINE AQUI</button>
+              <a href="https://www.instagram.com/recy_sprouts/" target="_blank" rel="noopener noreferrer">
+                <button class="botaoAssine">ASSINE AQUI</button>
+              </a>
             </div>
           </div>
         </div>
@@ -213,7 +219,7 @@
         <div class="membro">
           <div class="infoMembro">
             <img src="./src/AnaBarbiero.png" alt="Ana Barbiero" />
-            <h5>ANA BARBIERO</h5>
+            <h5>ANA<br>BARBIERO</h5>
           </div>
           <div class="descricaoMembro">
             <p>Estudante de Análise e Desenvolvimento de Sistemas</p>
