--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </div>
             <div class="membro">
                 <div class="infoMembro">
-                    <img src="./src/ana-julia-foto.jpg" alt="Ana Julia" />
+                    <img src="./src/AnaJulia.jpg" alt="Ana Julia" />
                     <h5 class="nome-membro">ANA<br>JULIA</h5>
                 </div>
                 <div class="descricaoMembro">
