--- a/index.html
+++ b/index.html
@@ -144,20 +144,19 @@
         </div>
 
     </div>
-    <div class="titulo-simulacao">
-    <h2 class="titulo-3d">
-        Simulação em vídeo 3D
-    </h2>
     <div class="simulacao">
-        <video autoplay loop muted>
+        <div class="titulo-3d">
+            Simulação em vídeo 3D
+        </div>
+        <div class="simulacao">
+            <video autoplay loop muted>
 
-            <source src="./src/video/f6428668-d457-4c00-8799-30a96e06e156.mp4" type="video/mp4">
+                <source src="./src/video/f6428668-d457-4c00-8799-30a96e06e156.mp4" type="video/mp4">
 
 
-        </video>
-
+            </video>
+        </div>
     </div>
-</div>
 
     <div class="modeloNegocios" id="assinaturas">
         <h2>Planos</h2>
