--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                     <li><a href="#sobre-nos">Sobre nós</a></li>
                 </ul>
             </div>
+            
 
             <div>
-                <a href="https://drive.google.com/file/d/10VpUrnjmU5VxOWtPwPXWTooOBYzbRevA/view">
+                <a href="https://drive.google.com/file/d/1pqDd7lJ3TsmnANkzIl2Si3njK8PlgkhV/view">
                     <button class="btn-assistir">Assista nosso pitch</button>
                 </a>
             </div>
@@ -144,19 +145,18 @@
         </div>
 
     </div>
-    <div class="simulacao">
-        <div class="titulo-3d">
-            Simulação em vídeo 3D
-        </div>
-        <div class="simulacao">
-            <video autoplay loop muted>
-
-                <source src="./src/video/f6428668-d457-4c00-8799-30a96e06e156.mp4" type="video/mp4">
-
-
-            </video>
-        </div>
+    <div class="titulo-simulacao">
+    <div class="titulo-3d">
+        Simulação em vídeo 3D
     </div>
+    <div class="simulacao">
+        <video autoplay loop muted>
+
+            <source src="./src/video/f6428668-d457-4c00-8799-30a96e06e156.mp4" type="video/mp4">
+        </video>
+
+    </div>
+</div>
 
     <div class="modeloNegocios" id="assinaturas">
         <h2>Planos</h2>
@@ -251,7 +251,7 @@
             </div>
             <div class="membro">
                 <div class="infoMembro">
-                    <img src="./src/AnaJulia.jpg" alt="Ana Julia" />
+                    <img src="./src/ana-julia-foto.jpg" alt="Ana Julia" />
                     <h5 class="nome-membro">ANA<br>JULIA</h5>
                 </div>
                 <div class="descricaoMembro">
@@ -283,6 +283,7 @@
                     <li><a href="#prototipo">Protótipo</a></li>
                     <li><a href="#assinaturas">Planos</a></li>
                     <li><a href="#sobre-nos">Sobre nós</a></li>
+                    <li><a href="https://drive.google.com/file/d/1pqDd7lJ3TsmnANkzIl2Si3njK8PlgkhV/view">Veja nosso pitch</a></li>
                 </ul>
             </div>
             <div class="contato">
